issue(#949): Updating navbar z-index

--- a/src/components/shared/header/pagesLinksContainer/styles.css
+++ b/src/components/shared/header/pagesLinksContainer/styles.css
@@ -13,6 +13,7 @@
     top: 0;
     height: 62px;
     opacity: 0.9;
+    z-index: 1000;
   }
 
   .navbar.scrolled img {
